--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,7 @@ jobs:
      runs-on: ubuntu-latest
   strategy:
     matrix:
+      node-version: [10.x, 12.x target, 14.x target, 15.x]
       os: [ubuntu-latest, windows-2016]
       node-version: [12.x, 14.x]
   steps:
