--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,7 +21,10 @@ jobs:
    test:
      runs-on: ubuntu-latest
   strategy:
-    matrix:
+      - uses: actions/upload-artifact@master
+        with:
+          name: webpack artifacts
+          path: public/
       node-version: [10.x, 12.x target, 14.x target, 15.x]
       os: [ubuntu-latest, windows-2016]
       node-version: [12.x, 14.x]
