--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,7 +41,11 @@ jobs:
   - name: npm install, and test
     run: |
       npm install
-      npm test
+    - uses: actions/download-artifact@main
+      with:
+        name: webpack artifacts
+        path: public
+    - name: npm install, and test
     env:
       CI: true
     runs-on: ubuntu-latest
